[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# Serum DEX dependencies - Minimal WASM-compatible version
solana-sdk = { version = "=1.16.0", default-features = false }
serum_dex = { git = "https://github.com/project-serum/serum-dex", tag = "v0.5.6", features = ["no-entrypoint"] }
